--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,6 +2,7 @@ body {
   font-family: Roboto, Arial;
 
   background-color: #D1D1D1;
+  color: #FFF;
 
   padding: 1em;
 }
@@ -50,11 +51,33 @@ body {
   flex: 1 0 calc(100% / 3);
 
   height: calc(100% / 3);
+
+  font-weight: bold;
 }
 
 .grid .cell.wide {
   flex: 1 0 calc(100% * (2/3));
 }
+
+.grid .cell:not(.wide) .content {
+  position: relative;
+  top:50%;
+  left:50%;
+  transform:translate(-50%, -50%);
+  text-align:center;
+}
+
+.grid .cell:not(.wide) .content * {
+  padding: 0.25em;
+  font-size: 1.5em;
+}
+
+.grid .cell:not(.wide) .content svg {
+  font-size: 4em;
+}
+
+
+/* COLOR HELPERS */
 
 .blue {
   background: #1e8bc4;
