Buttons and upcase

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -72,10 +72,28 @@ body {
   font-size: 1.5em;
 }
 
+.grid .cell:not(.wide) .content p {
+  text-transform: uppercase;
+}
+
 .grid .cell:not(.wide) .content svg {
   font-size: 4em;
 }
 
+ul.buttons li {
+  display: inline-block;
+  padding: 0.75em 1.5em;
+  margin: 1em;
+  border: 3px solid #FFF;
+}
+
+ul.buttons li * {
+  display: inline;
+}
+
+ul.buttons li p {
+  text-transform: uppercase;
+}
 
 /* COLOR HELPERS */
 
