--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -80,11 +80,36 @@ body {
   font-size: 4em;
 }
 
+.grid .cell.wide .content {
+  padding: 1em 2em;
+
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.blurb h1 {
+  font-size: 2em;
+  text-transform: uppercase;
+}
+
+.blurb * {
+  padding: 0.5em 0;
+}
+
+.blurb p {
+  font-weight: lighter;
+}
+
 ul.buttons li {
   display: inline-block;
   padding: 0.75em 1.5em;
   margin: 1em;
   border: 3px solid #FFF;
+}
+
+ul.buttons li:first-child {
+  margin-left: 0;
 }
 
 ul.buttons li * {
