--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -163,6 +163,23 @@ ul.images li img {
   float: right;
 }
 
+.col.right .breadcrumbs {
+  position: absolute;
+  top: 0.5em;
+  right: 0.75em;
+
+  z-index: 10;
+}
+
+.col.right .breadcrumbs svg {
+  font-size: 0.75em;
+  opacity: 0.5;
+}
+
+.col.right .breadcrumbs svg:first-child {
+  opacity: 1;
+}
+
 /* COLOR HELPERS */
 
 .blue {
